--- a/output/index.html
+++ b/output/index.html
@@ -8,7 +8,7 @@
     <link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet" />
 		<link rel="stylesheet" href="/style.css" />
 		<script defer src="/bundle.js"></script>
-	</head>
+	<script defer src="./public/bundle.js"></script></head>
 	<body>
 		<div id="app"></div>
 	</body>
