--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width initial-scale=1.0" />
 		<title>cha-ching</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet" />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+		/>
 		<link rel="stylesheet" href="/style.css" />
 		<script defer src="/bundle.js"></script>
 	</head>
