--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,13 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
+		<link
+			async
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/semantic-ui@2/dist/semantic.min.css"
+		/>
 		<link rel="stylesheet" href="/style.css" />
+		<script src="https://cdn.jsdelivr.net/npm/semantic-ui-react/dist/umd/semantic-ui-react.min.js"></script>
 		<script defer src="/bundle.js"></script>
 	</head>
 	<body>
