added subscription component and schema

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width initial-scale=1, shrink-to-fit=no" />
 		<meta name="theme-color" content="#c8ad55" />
 		<link rel="manifest" href="/manifest.json" />
-		<title>cha-ching</title>
+		<title>chaa-ching</title>
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/cdbootstrap@1.0.0/css/cdb.min.css"
